# rules_certmanager

./: BUILD.bazel  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl
.github/workflows/: ci.yml
private/: BUILD.bazel  cert_manager_health_check.bzl  cert_manager_install.bzl  health_check.sh.tmpl  install.sh.tmpl  launcher.py  providers.bzl  repositories.bzl  versions.bzl
tests/: BUILD.bazel  analysis_tests.bzl  cert_manager_health_wrapper.sh  cert_manager_install_wrapper.sh  smoke_test.sh
toolchain/: BUILD.bazel  toolchain.bzl
tools/: update_versions.sh
