load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "MODULE.bazel",
    "WORKSPACE",
    "defs.bzl",
    "extensions.bzl",
    "repositories.bzl",
])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//private:cert_manager_health_check",
        "//private:cert_manager_install",
        "//private:providers",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = ["//private:repositories"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    deps = ["//private:repositories"],
)
