"""Tests for rules_certmanager.

- Analysis tests verify rules instantiate cleanly without needing a cluster.
- Smoke test (`:smoke_test`, manual) composes a real kind cluster, applies
  cert-manager via the rule, then mints a SelfSigned Certificate and
  asserts it reaches Ready. Needs Docker on the host.
"""

load("@rules_certmanager//:defs.bzl", "cert_manager_health_check", "cert_manager_install")
load("@rules_itest//:itest.bzl", "itest_service", "service_test")
load("@rules_kind//:defs.bzl", "kind_cluster", "kind_health_check")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(":analysis_tests.bzl", "cert_manager_health_check_test_suite", "cert_manager_install_test_suite")

# ---- analysis ---------------------------------------------------------------

cert_manager_install_test_suite(name = "cert_manager_install_analysis")

cert_manager_health_check_test_suite(name = "cert_manager_health_check_analysis")

# ---- smoke composition ------------------------------------------------------
# kind_cluster -> cert_manager_install -> service_test that mints a
# Certificate via SelfSigned Issuer and asserts Ready.

kind_cluster(name = "cluster", k8s_version = "1.29")

kind_health_check(name = "cluster_health", cluster = ":cluster")

itest_service(
    name = "kind_svc",
    exe = ":cluster",
    health_check = ":cluster_health",
    tags = ["manual"],
)

# cert-manager via the rule under test.
cert_manager_install(name = "cert_manager_bin", tags = ["manual"])

cert_manager_health_check(name = "cert_manager_health_bin", tags = ["manual"])

sh_binary(
    name = "cert_manager_install_wrapper",
    srcs = ["cert_manager_install_wrapper.sh"],
    data = [":cert_manager_bin"],
)

sh_binary(
    name = "cert_manager_health_wrapper",
    srcs = ["cert_manager_health_wrapper.sh"],
    data = [":cert_manager_health_bin"],
)

itest_service(
    name = "cert_manager_svc",
    exe = ":cert_manager_install_wrapper",
    deps = [":kind_svc"],
    health_check = ":cert_manager_health_wrapper",
    tags = ["manual"],
)

sh_test(
    name = "smoke_test_bin",
    srcs = ["smoke_test.sh"],
    tags = ["manual"],
)

service_test(
    name = "smoke_test",
    services = [":cert_manager_svc"],
    test = ":smoke_test_bin",
    tags = [
        "manual",  # needs Docker; ~1-2 minute warm-up
        "no-sandbox",
        "requires-network",
    ],
)
